@@ -24,7 +24,7 @@ Depends: ${python:Depends},
 	 gnome-menus,
 	 python-xapian,
          python-apt (>= 0.7.13.4ubuntu3),
-	 python-aptdaemon (>= 0.11+bzr319),
+	 python-aptdaemon (>= 0.11+bzr342),
 	 python-aptdaemon-gtk,
          python-dbus,
 	 policykit-1,
