@@ -72,8 +72,6 @@ class AptdaemonBackend(gobject.GObject, TransactionsWatcher):
         reply_handler = lambda trans: self._run_transaction(trans, pkgname,
                                                             appname, iconname)
         self.aptd_client.remove_packages([pkgname], wait=False, 
-                                         # remove this once the new aptd 0.2.x dependency hits
-                                         remove_unused_dependencies=True,
                                          reply_handler=reply_handler,
                                          error_handler=self._on_trans_error)
 
@@ -253,9 +251,9 @@ class AptdaemonBackend(gobject.GObject, TransactionsWatcher):
             trans.set_debconf_frontend("gnome", reply_handler=lambda t: True,
                                        error_handler=self._on_trans_error)
             # set this once the new aptdaemon 0.2.x API can be used
-            #trans.set_remove_obsoleted_depends(True, 
-            #                                   reply_handler=lambda t: True,
-            #                                   error_handler=self._on_trans_error)
+            trans.set_remove_obsoleted_depends(True, 
+                                               reply_handler=lambda t: True,
+                                               error_handler=self._on_trans_error)
             
         # set proxy and run
         self.set_http_proxy(trans)
