@@ -7,6 +7,12 @@ software-center (1.1.21) UNRELEASED; urgency=low
   * softwarecenter/view/catview.py:
     - fix another i18n issue with the translated categories,
       thanks to Ricardo Pérez López for noticing it (LP: #545102)
+  * debian/control:
+    - depend on latest aptdaemon to handle the cache when the dpkg
+      journal is dirty
+  * softwarecenter/backend/aptd.py:
+    - ensure unused dependency removal (for direct dependencies only)
+      via aptdaemon
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 25 Mar 2010 20:45:35 +0100
 
